Fixed missing scrollbar

--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,6 +1,6 @@
-body {
-  overflow: hidden;
-}
+// body {
+//   overflow: hidden;
+// }
 
 .LoaderWrapper {
   position: absolute;
